# sudoku-server-rs

./: 100puzzles  Cargo.toml
backend/: .env  Cargo.toml
backend/migrations/: 20220406140542_create_puzzles_table.down.sql  20220406140542_create_puzzles_table.up.sql
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs
solver/: Cargo.toml
solver/src/: constants.rs  lib.rs  main.rs  solver.rs
