[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.19"
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
sqlx = { version = "0.5.11", features = ["json", "macros", "migrate", "postgres", "chrono", "runtime-tokio-rustls"] }
ulid = "0.5.0"
sudoku = { version = "0.7.0", features = ["serde"] }
