[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sudoku = { version = "0.7.0", features = ["serde"] }
