[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
sqlx = { version = "0.5.11", features = ["json", "macros", "migrate", "postgres", "chrono", "runtime-actix-rustls"] }
ulid = "0.5.0"
sudoku = "0.7.0"
